--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1\.0; orgstrap-block-checksum: 68b469d31743f79d7e57e15fbe5d8292a01ec4080934592164ab237e9e02f1f8; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1\.0; orgstrap-block-checksum: ff0a71bb7264103c8a33a474f418590ecdc7294abeb5906711670044f36eb7a5; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Orgstrap: Executable Org files
 #+startup: showall
@@ -223,7 +223,6 @@ This is the =orgstrap= block that is used for this file.
 <<orgstrap-edit-helper-defuns>>
 <<orgstrap-init-helper-defuns>>
 <<orgstrap-extra-helper-defuns>>
-<<orgstrap-do>>
 
 ;; tangle helpers
 
@@ -850,7 +849,7 @@ Here is the prop line from the first line of this file that
 includes the cypher and checksum of the =orgstrap= block.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1\.0; orgstrap-block-checksum: 68b469d31743f79d7e57e15fbe5d8292a01ec4080934592164ab237e9e02f1f8; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1\.0; orgstrap-block-checksum: ff0a71bb7264103c8a33a474f418590ecdc7294abeb5906711670044f36eb7a5; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -2017,54 +2016,6 @@ but it will not go in the local variables because we want there to be some hope 
 orgstrap being portable to other platforms outside of Emacs at some point in the
 very distant future, so keeping the machinery outside of the org file itself as
 minimal as possible is critical.
-*** Do
-FIXME these should be =ow-do=.
-
-See [[./do.org]] for more on what these are and how to use them.
-#+name: orgstrap-do
-#+begin_src elisp
-;; orgstrap-do-*
-
-;; dependencies (default on) (ref:do-deps)
-(defcustom orgstrap-do-packages t "Install some packages." :type 'boolean)
-(defcustom orgstrap-do-packages-emacs t "Install Emacs packages." :type 'boolean)
-(defcustom orgstrap-do-packages-system t "Install system packages." :type 'boolean)
-
-(defcustom orgstrap-do-data t "Retrieve external data needed by file." :type 'boolean) ; TODO naming etc. (ref:do-data)
-
-;; configuration
-(defcustom orgstrap-do-config t "Run code that modifies some configuration." :type 'boolean) ;(ref:do-config)
-(defcustom orgstrap-do-config-emacs t "Run code that modifies the Emacs configuration." :type 'boolean)
-(defcustom orgstrap-do-config-system t "Run code that modifies the system configuration." :type 'boolean)
-
-(defcustom orgstrap-do-services t "Run services needed by file." :type 'boolean)
-
-;; batch functionality (default off)
-
-(defvar orgstrap-do-run nil "`org-babel-execute-buffer'")
-
-(defvar orgstrap-do-export nil "Run export.") ; TODO format XXX -do-build-document ox-ssh being an odd one
-(defvar orgstrap-do-publish nil "Run publish workflow.")
-
-(defvar orgstrap-do-tangle nil "`org-babel-tangle-file'.")
-
-(defvar orgstrap-do-build nil ; may imply tangle
-  "Produce one or more artifacts derived from the file.")
-
-(defvar orgstrap-do-test nil "Run tests.") ;(ref:do-test)
-
-(defvar orgstrap-do-deposit nil "Deposit build artifacts somewhere.")
-#+end_src
-**** Candidates and docs
-[[./README.org::(do-deps)]] [[./do.org::(do-deps-cands)]]
-[[./README.org::(do-config)]] [[./do.org::(do-config-cands)]]
-[[./README.org::(do-test)]] [[./do.org::(do-test-cands)]]
-
-[[./README.org::(do-data)]]
-note that external data here would be data that the process described by the org file
-needs _locally_ in order to function, there are also many cases where the workflow
-described by the file might simply bootstrap a local working environment and code
-that will be used to manage and run data that sits elsewhere
 ** orgstrap.el :noexport:
 # XXX TODO it would be a super cool feature if xref could resolve to elisp source
 # blocks in org-mode files, because then half the need for the .el file would go away
@@ -2130,8 +2081,6 @@ that will be used to manage and run data that sits elsewhere
 <<orgstrap-init-helper-defuns>>
 
 <<orgstrap-extra-helper-defuns>>
-
-<<orgstrap-do>>
 
 (provide 'orgstrap)
 
@@ -2353,7 +2302,12 @@ Things that need to be done for a release.
 :CUSTOM_ID: changelog
 :END:
 ** 1.3
-- Add =orgstrap-norm-func--dprp-1.0= and make it the default norm func.
+- Remove all ~orgstrap-do~ variables.
+
+  The core of orgstrap is not the right place to maintain these.  They
+  will reappear under ~ow-do~ in the future.
+
+- Add ~orgstrap-norm-func--dprp-1.0~ and make it the default norm func.
 
   The default normalization function for orgstrap is now invariant to
   changes in the docstring for ~defun~, ~defun-local~, ~defmacro~,
